fcc/src/snapshots/fcc__preprocessor_tests__tests__ifdef_else_not_taken.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#ifdef X\\nint a;\\n#else\\nint b;\\n#endif\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
]
