fcc/src/snapshots/fcc__preprocessor_tests__tests__ifdef_else_taken.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define X\\n#ifdef X\\nint a;\\n#else\\nint b;\\n#endif\")"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "a",
    ),
    Semicolon,
    Whitespace(
        "\n",
    ),
]
