fcc/src/snapshots/fcc__preprocessor_tests__tests__ifdef_not_defined.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#ifdef MISSING\\nint a;\\n#endif\\nint b;\")"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "b",
    ),
    Semicolon,
]
