fcc/src/snapshots/fcc__preprocessor_tests__tests__ifndef_not_defined.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#ifndef MISSING\\nint a;\\n#endif\\nint b;\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
    KwInt,
    Identifier,
    Semicolon,
]
