fcc/src/snapshots/fcc__preprocessor_tests__tests__nested_ifdef_outer_true_inner_false.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define OUTER\\n#ifdef OUTER\\n#ifdef INNER\\nint a;\\n#else\\nint b;\\n#endif\\n#endif\\nint c;\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
    KwInt,
    Identifier,
    Semicolon,
]
