fcc/src/snapshots/fcc__preprocessor_tests__tests__passthrough.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"int x;\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
]
