fcc/src/snapshots/fcc__preprocessor_tests__tests__predefined_macro.snap
---
source: fcc/src/preprocessor_tests.rs
assertion_line: 57
expression: "pp_with_defines(\"int x = N;\", &[(\"N\", \"7\")])"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "x",
    ),
    Whitespace(
        " ",
    ),
    Assign,
    Whitespace(
        " ",
    ),
    IntegerLiteral(
        APInt {
            width: 3,
            signed: false,
            value: 7,
        },
    ),
    Semicolon,
]
