fcc/src/snapshots/fcc__preprocessor_tests__tests__undef.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define FOO 1\\n#undef FOO\\nint x = FOO;\")"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "x",
    ),
    Whitespace(
        " ",
    ),
    Whitespace(
        " ",
    ),
    Identifier(
        "FOO",
    ),
    Semicolon,
]
